# mlnotes

./: classification.ipynb  global temperature.ipynb  housing.ipynb
100daysofml/: Day1 数据预处理.ipynb
PyTorch深度学习实战/: note.ipynb  readme.md
chattts/: Untitled.ipynb
deeplearning1/: 01 python入门.ipynb  03 神经网络.ipynb  mathjax cheatsheet.ipynb  pyproject.toml
hands-on-editionv2/: Untitled.ipynb  classification.ipynb  tools_matplotlib.ipynb
hands-on-editionv3/: 02_end_to_end_machine_learning_project.ipynb  03 Classification.ipynb  04 Training Models.ipynb  10 使用 Keras 入门人工神经网络.ipynb  hello.py  matplotlib.ipynb  numpy.ipynb  panda.ipynb  pyproject.toml
huggingface-nlp/: transformers.ipynb
langchain-tutorial/: hello.py  llm_chain.ipynb  pyproject.toml
matplotlib/: pyplot 教程.ipynb  图像教程.ipynb
numpy/: NumPy 基础知识.ipynb
panda/: readme.md  预备知识.ipynb
zerotom-numpy/: numpy.ipynb  pyproject.toml
