[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx-socks>=0.10.0",
    "langchain-openai>=0.3.0",
    "socksio>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
